// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple Inputs disabled 1`] = `
<MultipleInputs
  classes={Object {}}
  disabled={true}
  items={Array []}
  onChange={[Function]}
  onRemoveItem={[Function]}
  placeholder={null}
>
  <div />
</MultipleInputs>
`;

exports[`Multiple Inputs render 1`] = `
<MultipleInputs
  classes={Object {}}
  disabled={false}
  items={Array []}
  onChange={[Function]}
  onRemoveItem={[Function]}
  placeholder={null}
>
  <div />
</MultipleInputs>
`;
